--- a/app/views/educations/new.html.erb
+++ b/app/views/educations/new.html.erb
@@ -1,3 +1,104 @@
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+     <script type="text/javascript">
+
+     $(document).ready(function() {
+        //$("input[value='Add']").click(function(e)    {
+          $("#AddSch").click(function() {  
+            //e.preventDefault();
+            var hidval = $('#valEdu').val();
+            if(hidval == 0)
+            {
+             hidval = 1;
+            }
+            //a = $('#valEdu').val();
+            //$('#valEdu').val(++a);
+            else
+            {
+              //$('#valEdu').val(++hidval);
+             hidval++;
+            }  
+            //alert(hidval);
+
+            var rownum=$("#Controls > tbody > tr").length;
+            //alert(rownum);
+            var updated_row_num;
+            if (rownum == 0)
+            {
+                updated_row_num=0;
+            }
+            else {
+                updated_row_num=rownum/2;
+            }
+
+            // var field = $("#field").val();
+            var year = new Date().getFullYear();
+
+            var DDL_fromProfession = "<select name='ParametersFromSch["+ updated_row_num +"]' id='DDL_FromSchYear'>";
+            for (var i = year; i >= 1950; --i) {
+                DDL_fromProfession += "<option text='" + i + "' value='" + i + "'>" + i + "</option>";
+            }
+            DDL_fromProfession += "</select>";
+
+                var DDL_ToProfession = "<select name='ParametersToSch["+ updated_row_num +"]'  id='DDL_ToSchYear'>";
+                for (var j = year; j >= 1950; --j) {
+                    if (j != year) {
+                        DDL_ToProfession += "<option text='" + j + "' value='" + j + "'>" + j + "</option>";
+                    }
+                    else {
+                        DDL_ToProfession += "<option text='Present' value='Present'>Present</option>";
+
+                    }
+                }
+                DDL_ToProfession += "</select>";
+
+     var input1 = "<input name='parametersSch["+ updated_row_num +"]' id='field' type='text' placeholder='Degree' style='text-align:center;'  />"
+                var newRow = "<tr><td align='center' style='font-size: x-large; color: #212121;' height='35px'>"
+                + input1 + "</td></tr>";
+
+     
+var controls = "<tr><td>From "+ DDL_fromProfession + " To "+DDL_ToProfession+ "</td></tr>";
+controls += "<br/><button type='button' class='btn_rmv'>Remove</button></td></tr>";
+
+     $('#Controls').append(newRow);
+     $('#Controls').append(controls);
+     return false;
+  });
+
+            $('#Controls').on('click', '.btn_rmv', function() {
+                var index = $(this).closest('tr').index() + 2
+                $('#Controls tr:nth-child(n+' + (index - 2) + ')').remove();
+                return false;
+            });
+
+ });
+</script> 
+
+<script type="text/javascript">
+
+
+                        var selectFrom = document.getElementById("DDL_FromProYear");
+                        var selectTo = document.getElementById("toyear");
+                        var year = new Date().getFullYear();
+                        for (var i = year; i >= 1950; --i) {
+                            var option = document.createElement('option');
+                            option.text = option.value = i;
+                            selectFrom.add(option, 0);
+
+                        }
+                        for (var i = year; i >= 1950; --i) {
+
+                            var option = document.createElement('option');
+                            if (i != year) {
+                                option.text = option.value = i;
+                            }
+                            else {
+                                option.text = option.value = "Present";
+                            }
+                            selectTo.add(option, 0);
+                        }
+   
+                    </script>
+
 <h2 class = "subtitle">
 	Education
 </h2>
@@ -5,15 +106,27 @@
 <table width="100%">
       <tr style = "text-align:center;">
          <td>
-            <%= f.text_field :tf_Degree,placeholder: "Degree" %>
+            <%= f.text_field :tf_Degree,placeholder: "Degree", :style => "text-align:center;" %>
          </td>
       </tr>
       <tr style = "text-align:center;">
          <td>
             From
-            <%= f.select :fromyear, (1995..Time.now.year).to_a, :include_blank => {:year => "Select year"} %>
-            to
-            <%= f.select :toyear, (1995..Time.now.year).to_a, :include_blank => {:year => "Select year"} %>
+            <%= f.select :fromyear, (1950..Time.now.year).to_a.reverse, :include_blank => {:year => "Select year"} %>
+            To
+            <%= f.select :toyear, 
+             (1995..Time.now.year-1).to_a.reverse.unshift('Present'), 
+             :include_blank => {:year => "Select year"} %>
+         </td>
+      </tr>
+         <tr>
+         <td align="center">
+            <table id="Controls">
+            </table>
+            
+            <div><input id="AddSch" value="Add" type="submit" /></div>
+            <input id="valEdu" type="hidden" value="0" />
+            
          </td>
       </tr>
 </table>
