--- a/app/assets/stylesheets/style1.css
+++ b/app/assets/stylesheets/style1.css
@@ -490,8 +490,8 @@ $grayMediumLight: #eaeaea;
 }
 
 .field_with_errors {
-  @extend .control-group;
-  @extend .error;
+ /* @extend .control-group;
+  @extend .error;*/
 }
 
 .buttonhome
