changed db query, added jaskeerat and removed scroll bars

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,32 +54,32 @@
             </p>
 
         <h1 class="title">The Team</h1>    
-         <div class="member">
+         <div class="member" style="overflow:hidden;">
            <%= image_tag  "Neil.png", :class => "photo" %>
                   <p class="description">
                     Neil Limaye - CEO and Founder. Neil is a junior at Princeton High School.
                 </p>
             </div>
 
-         <div class="member">
+         <div class="member"  style="overflow:hidden;">
             <%= image_tag "Kevin.png",:class => "photo" %>
                   <p class="description">
                    Kevin Ivanov - CMO. Kevin studies Computer Science at Rutgers University - New Brunswick.
                 </p>
             </div>
-            <div class="member">
-                <%= image_tag "Matthew.png",:class => "photo" %>
+            <div class="member" style="overflow:hidden;">
+                <%= image_tag "Jaskeerat.png",:class => "photo" %>
                   <p class="description">
-                    Matthew Wong - Outreach. Matt studies engineering at the University of Wisconsin - Madison.
+                    Jaskeerat Sethi - Head of Veteran and Student outreach and is currently an honors student at West Windsor Plainsboro High School.
                 </p>
             </div>
-            <div class="member">
+            <div class="member" style="overflow:hidden;">
                 <%= image_tag "Peter.png",:class => "photo" %>
                 <p class="description">
                     Peter Paine - Outreach. Peter is a junior at Saint Paul's School in Concord, New Hampshire.
                 </p>
             </div>
-            <div class="member">
+            <div class="member" style="overflow:hidden;">
                 <%= image_tag "Gauthier.png",:class => "photo" %>
                 <p class="description">
                     Gauthier Kreilmann - Development and Marketing. Gauthier studies Computer Science at American
@@ -87,7 +87,7 @@
                 </p>
             </div>
 
-            <div class="member">
+            <div class="member" style="overflow:hidden;">
                 <%= image_tag "Anik.png",:class => "photo" %>
                 <p class="description">
                     Anik Patel - Development and Marketing. Anik studies Computer Science at Rensselaer Polytechnic
@@ -95,14 +95,14 @@
                 </p>
             </div>            
         <h1 class="title">Our Board of Advisors</h1>
-        <div class="member">
+        <div class="member" style="overflow:hidden;">
             <%= image_tag "Hernandez.jpg",:class => "photo" %>
             <p class="description">
                 Fernando Hernandez is the Director of Supplier Diversity and the Head of the Global
                 Procurement Group at Microsoft.
             </p>
         </div>
-        <div class="member">
+        <div class="member" style="overflow:hidden;">
             <%= image_tag "Kreilmann.jpg",:class => "photo" %>
             <p class="description">
                 Bernard Kreilmann is the current CEO of Ferrero USA. He studied Marketing at the
@@ -110,14 +110,14 @@
                 CEO Program at Wharton Business School.
             </p>
         </div>
-        <div class="member">
+        <div class="member" style="overflow:hidden;">
             <%= image_tag "Lemenager.jpg",:class => "photo" %>
             <p class="description">
                 Steve Lemenager, graduate of Bowdoin (B.A.) and Harvard (Ed. M.), is the former
                 admissions executive at Princeton and President of Edvice LLC.
             </p>
         </div>
-        <div class="member">
+        <div class="member" style="overflow:hidden;">
             <%= image_tag "Paine.jpg",:class => "photo" %>
             <p class="description">
                 Els Paine is the Associate Director of Princeton University's council on Science
@@ -125,7 +125,7 @@
                 the Wharton School.
             </p>
         </div>
-        <div class="member">
+        <div class="member" style="overflow:hidden;">
             <%= image_tag "Snyder.jpg",:class => "photo" %>
             <p class="description">
                 Gary Snyder is the current principal of the Princeton High School in Princeton,
