--- a/app/assets/stylesheets/style1.css
+++ b/app/assets/stylesheets/style1.css
@@ -107,7 +107,7 @@ p.process{
 
 .member{
     width: 80%;
-    height: 110px;
+    height: auto;
     overflow: auto;
     margin-left: 10%;
     margin-top: 10px;
