--- a/app/views/static_pages/connections.html.erb
+++ b/app/views/static_pages/connections.html.erb
@@ -2,6 +2,7 @@
     Connections 
 </h1>
 <%= form_for :connections, :url => { :method => :get, :action => :connections } do |f| %>
+<% if @user.nil? %>
 <% @user.each do |u| %>
 <table align="center" width="100%" style=" margin-top: 30px; margin-bottom:30px">
     <tr>
@@ -75,6 +76,7 @@
         </td>
     </tr>
 </table>
+<% end %>
 <% end %>
 <table width="25%" align="center" style="margin-left:240px" >
 <tr>
