changes in settings page

--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -489,10 +489,10 @@
                     <a href="#" style="color: #33b5e5;" onclick="document.location = 'mailto:help@mentormentored.org'; return false;">
                     Let me know</a>
             </div>
-        <table align="center" width="100%">
+        <table align="center" width="75%">
             <tr>
-                <td>    
-                    <div class="btn_delmyaccount" align="center">
+                <td style="text-align:left;">    
+                    <div class="button">
                         <a id="DeleteMyAccount" class="buttonSearch">Delete My Account</a>
                     </div>
                 </td>
@@ -504,7 +504,7 @@
 </table>
    <table width="80%">
         <tr>
-            <td style="font-size: x-large; color: #212121; margin-right:10px;" height="35px;">
+            <td style="font-size: x-large; color: #212121; margin-right:10px;text-align:center;" height="35px;">
                 <div class="button" style="">
                     <input type="submit" class = "buttonSearch" value= 'Update'>
                 </div>
