scearch and settings

--- a/app/assets/stylesheets/style1.css
+++ b/app/assets/stylesheets/style1.css
@@ -353,6 +353,19 @@ color:blue;
     margin-top: 15px;
     margin-bottom: 15px;
 }
+.buttonblck1{
+ background-color:#303030;
+ border-radius:15px;
+ display:inline-block;
+ color: white;
+ font-family: Raleway;
+ font-size:12px;
+ font-weight:bold;
+ padding:5px 10px;
+ text-decoration: none;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
 .buttonsmall
 {
 	background-color:#303030;
