MM site updated 2

--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -513,7 +513,7 @@
         <tr>
             <td style="font-size: x-large; color: #212121; text-align:center;" height="35px;">
                 <div class="button">
-                    <%= link_to "Back", :back, { :class => "buttonBack"} %>
+                    <%= link_to "Back", "/default", { :class => "buttonBack"} %>
                     
                 </div>
             </td>
