--- a/app/views/static_pages/pending_request.html.erb
+++ b/app/views/static_pages/pending_request.html.erb
@@ -96,7 +96,7 @@
 <tr>
         <td>
             <div class="button">
-                    <%= link_to "Back", :back, { :class => "buttonBack"} %>
+                    <%= link_to "Back", "/default", { :class => "buttonBack"} %>
             </div>
         </td>
     </tr>
