--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -60,7 +60,7 @@
             <tr>
                <td>
                	  <div class="button">
-               	      <%= link_to "Back", :back, { :class => "buttonBack"} %>
+               	      <%= link_to "Back", "/default", { :class => "buttonBack"} %>
                   </div>
                </td>
                <td width="15px"></td>
