--- a/app/views/static_pages/connections.html.erb
+++ b/app/views/static_pages/connections.html.erb
@@ -82,7 +82,7 @@
 <tr>
         <td>
             <div class="button">
-                    <%= link_to "Back", :back, { :class => "buttonBack"} %>
+                    <%= link_to "Back", "/default", { :class => "buttonBack"} %>
             </div>
         </td>
     </tr>
